# System_Diagnostic

./: README.md
gui_telemetry/: package.xml  setup.cfg  setup.py
gui_telemetry/gui_telemetry/: gui_subscriber_batBar.py  publisher.py
gui_telemetry/launch/: display.launch.py
minion_diagnostic/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
minion_diagnostic/launch/: minion_diagnostic.launch.py
minion_diagnostic/minion_diagnostic/: (old)-first-gui.py  (old)-neo.py  default-layout.json  qt6_gui.py  ros_emulator.py  system_health_monitor.py  system_status_simulator.py  systeminfo.py
minion_diagnostic/minion_diagnostic/system_health_example/: system_health_monitor.py  systeminfo.py
minion_diagnostic/minion_diagnostic/widgets/: batterywidget.py  custom_widgets_qt5.py  custom_widgets_qt6.py  nodeswidgit.py
minion_diagnostic/src/: monitor_nodes_topics.cpp
minion_diagnostic_msg/: CMakeLists.txt  package.xml
minion_diagnostic_msg/msg/: NodeStatus.msg  SystemMonitorData.msg  SystemStatus.msg  TopicStatus.msg
src/gui_frontend/: package.xml  setup.cfg  setup.py
src/parser/: CMakeLists.txt  package.xml
